<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F3F3"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/outerCircle"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:src="@drawable/circle_background"
        android:layout_marginTop="-20dp"
        android:layout_marginStart="-50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/innerCircle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="-50dp"
        android:src="@drawable/circle_background"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="150dp"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/salsa"
        android:text="mentor"
        android:textColor="#2699a0"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:background="@drawable/rectangle"
        android:layout_marginBottom="-20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvappname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/salsa"
        android:text="me"
        android:textColor="#FFEB3B"
        android:textColorHighlight="#FFEB3B"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="Login"
        android:textColor="#FAF9F9"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppName" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_edit_text"

        android:ems="10"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit_text"
        android:ems="10"
        android:hint="Enter your password"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="@id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="117dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edit_text"

        android:text="Login"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@id/etPassword"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:text="Forgot Your Password?"
        android:textColor="#DCE0E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvSignUpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Sign Up"
        android:textSize="16sp"
        android:textColor="#E4E7E8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>

    

</androidx.constraintlayout.widget.ConstraintLayout>